# StockTrendPredictor

./: .replit  app.py  pyproject.toml
utils/: data_fetcher.py  lstm_model.py  nse_stocks.py  preprocessor.py  visualizer.py
