[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.11.2",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "requests-html>=0.10.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.45.1",
    "tensorflow>=2.19.0",
    "trafilatura>=2.0.0",
    "yfinance>=0.2.61",
]
